test/functions/deitz/test_resolve_best_shadowed2.good
test_resolve_best_shadowed2.chpl:2: In function 'main':
test_resolve_best_shadowed2.chpl:11: error: ambiguous call 'g()'
test_resolve_best_shadowed2.chpl:10: note: candidates are: g()
test_resolve_best_shadowed2.chpl:16: note:                 g()
